--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="icon" href="images/icon.ico">
-    <title>mark</title>
+    <title>web-page</title>
 </head>
 <body>
     <div class="home">
@@ -17,6 +17,7 @@
                 <li><a href="#home">home</a></li>
                 <li><a href="#about">about</a></li>
                 <li><a href="#services">services</a></li>
+                <li><a href="#skills">skills</a></li>
                 <li><a href="#contact">contact my</a></li>
             </ul>
             <a href="#" class="btn subscribe">subscribe</a>
@@ -81,7 +82,7 @@
         </div>
     </div>
     <!-- end services -->
-    <div class="skills" id="contact">
+    <div class="skills" id="skills">
         <div class="lang">
             <h2>.my <span>skills</span></h2>
             <div class="lang-img">
@@ -106,6 +107,34 @@
         </div>
     </div>
     <!-- end skills -->
+    <div class="contact-me" id="contact">
+        <div class="new-here">
+            <div class="text">
+                <h2>new here?</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum dolores doloribus.</p>
+                <a href="#" class="btn">sign ub</a>
+            </div>
+            <div class="contact-image">
+                <img src="images/Connected-cuate.png" alt="">
+            </div>
+        </div>
+        <form>
+            <h2>sign in</h2>
+            <div class="input">
+                <input type="text" placeholder="username">
+                <input type="password" placeholder="password">
+            </div>
+            <a href="#" class="btn">login</a>
+            <p>Lorem ipsum dolor sit amet consectetur.</p>
+            <div class="form-social">
+                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                <a href="#"><i class="fa-brands fa-linkedin-in"></i></i></a>
+                <a href="#"><i class="fa-brands fa-google"></i></i></a>
+            </div>
+        </form>
+    </div>
+    <!-- end contact -->
     <footer>
         <h2>lmohamed <span>mamdouh</span></h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error, sed!</p>
