Added a button to the scroll

--- a/index.html
+++ b/index.html
@@ -140,6 +140,10 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error, sed!</p>
         <p><span>copyright ©2022 Mohamed Mamdouh DO7A <i class="fa-solid fa-heart"></i></span></p>
     </footer>
+    <!-- end footer -->
+    <div class="up" id="up">
+        <i class="fa-solid fa-arrow-up-long"></i>
+    </div>
     <script src="js/mo.js"></script>
 </body>
 </html>
