--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>web-page</title>
 </head>
 <body>
-    <div class="home">
+    <div class="home" id="home">
         <nav>
             <h2>do7a<span>web</span></h2>
             <ul id="action">
