--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         <div class="content">
             <div class="container-texts">
                 <h4>hello my name is</h4>
-                <h1>lahcen <span>mohamed</span></h1>
-                <h3>I'm Mohamed, I work as a <span>frontend</span>designer</h3>
+                <h1>ing . <span>mohamed</span></h1>
+                <h3>I'm Mohamed, I work as a <span>frontend</span>developer</h3>
                 <a href="#" class="btn">download cv</a>
                 <div class="social">
                     <a href="#" target="_blank"><img src="images/face.png"></a>
@@ -51,7 +51,7 @@
         </div>
         <div class="about-text">
             <h2>.about <span>me</span></h2>
-            <h3><span>frontend</span> designer</h3>
+            <h3><span>frontend</span> developer</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed blanditiis quam necessitatibus delectus laborum autem sunt ad est at ea. Accusantium fuga impedit laboriosam maxime sapiente maiores quidem enim corporis cum distinctio harum amet unde eius optio, vel ipsum nisi dolores sit obcaecati, voluptates vitae corrupti magni similique. Minus, quae.</p>
         </div>
     </div>
