--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="content">
             <div class="container-texts">
                 <h4>hello my name is</h4>
-                <h1>eng . <span>mohamed</span></h1>
+                <h1>eng . <span>ahmed</span></h1>
                 <h3>I'm Mohamed, I work as a <span>frontend</span>developer</h3>
                 <a href="#" class="btn">download cv</a>
                 <div class="social">
