The effect of animation has been added to some elements using the Wow library

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="icon" href="images/icon.ico">
@@ -46,10 +47,10 @@
     </div>
     <!-- end home -->
     <div class="about" id="about">
-        <div class="about-image">
+        <div class="about-image wow fadeInLeftBig">
             <img src="images/Webinar-bro.png" alt="">
         </div>
-        <div class="about-text">
+        <div class="about-text wow fadeInRightBig">
             <h2>.about <span>me</span></h2>
             <h3><span>frontend</span> developer</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed blanditiis quam necessitatibus delectus laborum autem sunt ad est at ea. Accusantium fuga impedit laboriosam maxime sapiente maiores quidem enim corporis cum distinctio harum amet unde eius optio, vel ipsum nisi dolores sit obcaecati, voluptates vitae corrupti magni similique. Minus, quae.</p>
@@ -59,22 +60,22 @@
     <div class="services" id="services">
         <h2><span>our</span> services</h2>
         <div class="cards">
-            <div class="box">
+            <div class="box wow fadeInLeftBig">
                 <i class="fa-solid fa-mobile-screen-button"></i>
                 <h3>mobile div</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores inventore nostrum facere veritatis fugit voluptas ipsam unde odit cumque earum.</p>
             </div>
-            <div class="box">
+            <div class="box wow fadeInUpBig">
                 <i class="fa-regular fa-file-code"></i>
                 <h3>mobile div</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores inventore nostrum facere veritatis fugit voluptas ipsam unde odit cumque earum.</p>
             </div>
-            <div class="box">
+            <div class="box wow fadeInUpBig">
                 <i class="fa-solid fa-laptop-code"></i>
                 <h3>mobile div</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores inventore nostrum facere veritatis fugit voluptas ipsam unde odit cumque earum.</p>
             </div>
-            <div class="box">
+            <div class="box wow fadeInRightBig">
                 <i class="fa-solid fa-sitemap"></i>
                 <h3>mobile div</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores inventore nostrum facere veritatis fugit voluptas ipsam unde odit cumque earum.</p>
@@ -115,7 +116,7 @@
                 <a href="#" class="btn">sign ub</a>
             </div>
             <div class="contact-image">
-                <img src="images/Connected-cuate.png" alt="">
+                <img class ="wow fadeInLeftBig" src="images/Connected-cuate.png" alt="">
             </div>
         </div>
         <form>
@@ -127,7 +128,7 @@
             <a href="#" class="btn">login</a>
             <p>Lorem ipsum dolor sit amet consectetur.</p>
             <div class="form-social">
-                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                <a href="#"><i class="fa-brands fa-facebook-f wow "></i></a>
                 <a href="#"><i class="fa-brands fa-twitter"></i></a>
                 <a href="#"><i class="fa-brands fa-linkedin-in"></i></i></a>
                 <a href="#"><i class="fa-brands fa-google"></i></i></a>
@@ -144,6 +145,7 @@
     <div class="up" id="up">
         <i class="fa-solid fa-arrow-up-long"></i>
     </div>
+    <script src="js/wow.min.js"></script>
     <script src="js/mo.js"></script>
 </body>
 </html>
